@@ -1,3 +1,7 @@
+   * Add support for handling control-l better. CGDB now clears the
+     entire GDB windows buffer, filling it with all newlines. The history
+     of the GDB buffer is still available with page up and page down.
+
    * Enhanced tgdb in a2 mode. It now understands GNAT's 
      pre-instance-choice, instance-choice, post-instance-choice extension.
 
